--- a/Semana 1/index.html
+++ b/Semana 1/index.html
@@ -16,7 +16,7 @@
         <div class="col-md-8">
           <div class="lead">
             <div class="pb-3">
-              <h1 class="display-4">Cusro Front-End</h1>
+              <h1 class="display-4">Curso Front-End</h1>
               <h2 class="display-6 fw-lighter">Pós-Graduação IF Sudeste MG - 2023</h2>
               <p class="text-muted fw-lighter text-end">Por Elisson Carvalho</p>          
             </div>
